--- a/Korem/src/main/res/layout/item_jawaban_survey.xml
+++ b/Korem/src/main/res/layout/item_jawaban_survey.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_ethernet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,23 +15,10 @@
             android:id="@+id/rb_jawaban"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Java"
+            android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_name"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:fontFamily="sans-serif"-->
-<!--            android:text="ini pertanyaan survey"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textSize="18sp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/java"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
