--- a/Korem/src/main/res/layout/item_giat.xml
+++ b/Korem/src/main/res/layout/item_giat.xml
@@ -18,18 +18,18 @@
         android:padding="12dp">
 
         <TextView
-            android:id="@+id/tv_judul_cuti"
+            android:id="@+id/tv_giat_tujuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
-            android:text="@string/cuti_judul_view"
+            android:fontFamily="sans-serif"
+            android:text="@string/giat_tujuan_view"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_keterangan_cuti"
+            android:id="@+id/tv_giat_keterangan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -38,10 +38,10 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_judul_cuti" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_giat_tujuan" />
 
         <TextView
-            android:id="@+id/tv_jenis_cuti"
+            android:id="@+id/tv_giat_jenis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -50,7 +50,31 @@
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_keterangan_cuti" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_giat_keterangan" />
+
+        <TextView
+            android:id="@+id/tv_giat_departemen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/giat_departemen_view"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_giat_jenis" />
+
+        <TextView
+            android:id="@+id/tv_giat_lokasi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/giat_lokasi_view"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_giat_departemen" />
 
         <View
             android:id="@+id/separator1"
@@ -58,8 +82,7 @@
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
             android:background="#c0c0c0"
-            app:layout_constraintTop_toBottomOf="@+id/tv_jenis_cuti"
-            tools:layout_editor_absoluteX="12dp" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_giat_lokasi" />
 
         <TextView
             android:id="@+id/tv_mulai_cuti"
@@ -95,43 +118,16 @@
             tools:layout_editor_absoluteX="12dp" />
 
         <TextView
-            android:id="@+id/tv_status_cuti"
+            android:id="@+id/tv_status_giat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-black"
-            android:text="@string/cuti_status_view"
+            android:text="@string/giat_proses_view"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/separator2" />
-
-        <TextView
-            android:id="@+id/tv_revisi_cuti"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif"
-            android:text="@string/cuti_revisi_view"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_status_cuti" />
-
-        <TextView
-            android:id="@+id/tv_ditolak_cuti"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif"
-            android:text="@string/cuti_ditolak_view"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_status_cuti" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
