--- a/Korem/src/main/res/layout/activity_tambah_giat.xml
+++ b/Korem/src/main/res/layout/activity_tambah_giat.xml
@@ -146,6 +146,25 @@
 
             </LinearLayout>
 
+            <Button
+                android:id="@+id/btn_giat_foto"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:backgroundTint="@color/secondaryColor"
+                android:text="@string/tambah_foto"
+                android:textColor="@color/white" />
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/giat_img_view"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="6dp"
+                android:contentDescription="@string/image"
+                android:visibility="gone"
+                app:riv_corner_radius="75dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
