--- a/Korem/src/main/res/layout/activity_presensi.xml
+++ b/Korem/src/main/res/layout/activity_presensi.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/presensi"
+            android:text="@string/absensi"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
