--- a/Korem/src/main/res/layout/item_siap_ops_gerak.xml
+++ b/Korem/src/main/res/layout/item_siap_ops_gerak.xml
@@ -31,7 +31,7 @@
             android:id="@+id/tv_siap_ops"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="6dp"
             android:fontFamily="sans-serif"
             android:text="@string/siap_ops_view"
             android:textColor="@color/black"
@@ -43,19 +43,20 @@
             android:id="@+id/tv_siap_gerak"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="6dp"
             android:fontFamily="sans-serif"
             android:text="@string/siap_gerak_view"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_siap_ops" />
+            app:layout_constraintStart_toEndOf="@+id/tv_siap_ops"
+            app:layout_constraintTop_toBottomOf="@+id/tv_siap_keterangan" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="6dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +77,7 @@
             android:id="@+id/tv_siap_createddate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="6dp"
             android:fontFamily="sans-serif"
             android:text=""
             android:textColor="@color/md_grey_700"
