--- a/Korem/src/main/res/layout/activity_giat.xml
+++ b/Korem/src/main/res/layout/activity_giat.xml
@@ -57,48 +57,12 @@
 
     </FrameLayout>
 
-    <!--    <androidx.recyclerview.widget.RecyclerView-->
-    <!--        android:id="@+id/rv_giat_list"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:layout_marginTop="60dp"-->
-    <!--        android:paddingHorizontal="24dp"-->
-    <!--        android:paddingTop="4dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        tools:listitem="@layout/item_giat" />-->
-
-    <!--    <com.github.ybq.android.spinkit.SpinKitView-->
-    <!--        android:id="@+id/loading_anim"-->
-    <!--        style="@style/SpinKitView.Large.ThreeBounce"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_gravity="center"-->
-    <!--        app:SpinKit_Color="@color/secondaryLightColor"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@+id/rv_giat_list"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/rv_giat_list" />-->
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/empty"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:contentDescription="@string/icon_empty"-->
-    <!--        android:src="@drawable/ic_empty"-->
-    <!--        android:visibility="gone"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@+id/rv_giat_list"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/rv_giat_list" />-->
-
     <com.github.clans.fab.FloatingActionButton
         android:id="@+id/fab_add_giat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="60dp"
         android:src="@drawable/ic_add"
         app:fab_colorNormal="@color/secondaryColor"
         app:fab_colorPressed="@color/secondaryDarkColor"
