--- a/Korem/src/main/res/layout/bottom_sheet_giat_detail.xml
+++ b/Korem/src/main/res/layout/bottom_sheet_giat_detail.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cv_ethernet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="6dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardBackgroundColor="@color/md_grey_200"
     app:cardCornerRadius="8dp"
     app:elevation="8dp">
 
@@ -17,16 +13,27 @@
         android:orientation="horizontal"
         android:padding="12dp">
 
+        <View
+            android:id="@+id/separator"
+            android:layout_width="100dp"
+            android:layout_height="5dp"
+            android:background="@drawable/rounded_box"
+            android:backgroundTint="@color/md_grey_400"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tv_giat_tujuan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:fontFamily="sans-serif"
             android:text="@string/giat_tujuan_view"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/separator" />
 
         <TextView
             android:id="@+id/tv_giat_keterangan"
@@ -131,4 +138,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
