--- a/Korem/src/main/res/layout/activity_tambah_giat.xml
+++ b/Korem/src/main/res/layout/activity_tambah_giat.xml
@@ -110,6 +110,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     android:spinnerMode="dropdown"
+                    app:smsp_arrowColor="@color/primaryColor"
                     app:smsp_floatingLabelColor="@color/primaryColor"
                     app:smsp_floatingLabelText="Marketing"
                     app:smsp_hint="Pilih Departemen"
@@ -130,6 +131,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:spinnerMode="dropdown"
+                    app:smsp_arrowColor="@color/primaryColor"
                     app:smsp_floatingLabelColor="@color/primaryColor"
                     app:smsp_floatingLabelText="Paket Internet"
                     app:smsp_hint="Pilih Jenis Giat"
