feat: - add profile page - add logout button - add icon in login and logout button

--- a/Korem/src/main/res/layout/activity_login.xml
+++ b/Korem/src/main/res/layout/activity_login.xml
@@ -73,6 +73,9 @@
         app:p_backgroundTint="@color/primaryColor"
         app:p_bgColor="@color/colorSecondary"
         app:p_cornerRadius="5dp"
+        app:p_icon="@drawable/ic_login"
+        app:p_iconGravity="textStart"
+        app:p_iconPadding="8dp"
         app:p_layoutDirection="ltr"
         app:p_progressBGColor="@color/primaryColor"
         app:p_progressColor="@color/primaryLightColor"
